[tool.poetry]
name = "recruitment-dev-python-backend-comments-tree-homework-rusiliu"
version = "0.1.0"
description = ""
authors = ["Mio Lau <liurusi.101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
schema = "^0.7.5"
gunicorn = "^20.1.0"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "TUNA"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
